--- a/ide/findreplacedialog.lfm
+++ b/ide/findreplacedialog.lfm
@@ -1,10 +1,10 @@
 object LazFindReplaceDialog: TLazFindReplaceDialog
   Left = 334
-  Height = 331
+  Height = 347
   Top = 185
-  Width = 416
-  HorzScrollBar.Page = 415
-  VertScrollBar.Page = 330
+  Width = 420
+  HorzScrollBar.Page = 419
+  VertScrollBar.Page = 346
   ActiveControl = TextToFindComboBox
   BorderIcons = [biSystemMenu]
   Caption = 'LazFindReplaceDialog'
@@ -50,7 +50,7 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     Left = 112
     Height = 21
     Top = 12
-    Width = 298
+    Width = 302
     Anchors = [akTop, akLeft, akRight]
     AutoComplete = True
     AutoCompleteText = [cbactEnabled, cbactEndOfLineComplete, cbactRetainPrefixCase, cbactSearchAscending]
@@ -69,7 +69,7 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     Left = 120
     Height = 21
     Top = 39
-    Width = 290
+    Width = 294
     Anchors = [akTop, akLeft, akRight]
     AutoComplete = True
     AutoCompleteText = [cbactEnabled, cbactEndOfLineComplete, cbactRetainPrefixCase, cbactSearchAscending]
@@ -84,9 +84,9 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     AnchorSideRight.Control = ReplaceAllButton
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
-    Left = 222
+    Left = 226
     Height = 24
-    Top = 301
+    Top = 317
     Width = 73
     Anchors = [akRight, akBottom]
     AutoSize = True
@@ -106,9 +106,9 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
-    Left = 359
+    Left = 363
     Height = 24
-    Top = 301
+    Top = 317
     Width = 51
     Anchors = [akRight, akBottom]
     AutoSize = True
@@ -129,7 +129,7 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     AnchorSideTop.Side = asrBottom
     AnchorSideBottom.Control = CancelButton
     Left = 6
-    Height = 229
+    Height = 245
     Top = 66
     Width = 199
     Anchors = [akTop, akLeft, akBottom]
@@ -218,30 +218,32 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     AnchorSideTop.Control = OriginGroupBox
     AnchorSideTop.Side = asrBottom
     Left = 211
-    Height = 69
-    Top = 141
+    Height = 74
+    Top = 146
     Width = 199
     BorderSpacing.Around = 6
     Caption = 'ScopeGroupBox'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousSpaceResize
+    ChildSizing.ShrinkHorizontal = crsHomogenousSpaceResize
+    ChildSizing.ShrinkVertical = crsHomogenousSpaceResize
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
     TabOrder = 5
     object SelectedRadioButton: TRadioButton
-      Left = 3
+      Left = 6
       Height = 20
-      Top = 32
-      Width = 189
-      Align = alTop
-      BorderSpacing.Top = 6
-      BorderSpacing.Around = 3
+      Top = 6
+      Width = 183
       Caption = 'SelectedRadioButton'
       TabOrder = 0
     end
     object GlobalRadioButton: TRadioButton
-      Left = 3
+      Left = 6
       Height = 20
-      Top = 3
-      Width = 189
-      Align = alTop
-      BorderSpacing.Around = 3
+      Top = 32
+      Width = 183
       Caption = 'GlobalRadioButton'
       Checked = True
       State = cbChecked
@@ -254,30 +256,32 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     AnchorSideTop.Control = ScopeGroupBox
     AnchorSideTop.Side = asrBottom
     Left = 211
-    Height = 69
-    Top = 216
+    Height = 74
+    Top = 226
     Width = 199
     BorderSpacing.Around = 6
     Caption = 'DirectionGroupBox'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousSpaceResize
+    ChildSizing.ShrinkHorizontal = crsHomogenousSpaceResize
+    ChildSizing.ShrinkVertical = crsHomogenousSpaceResize
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
     TabOrder = 6
     object BackwardRadioButton: TRadioButton
-      Left = 3
+      Left = 6
       Height = 20
-      Top = 32
-      Width = 189
-      Align = alTop
-      BorderSpacing.Top = 6
-      BorderSpacing.Around = 3
+      Top = 6
+      Width = 183
       Caption = 'BackwardRadioButton'
       TabOrder = 0
     end
     object ForwardRadioButton: TRadioButton
-      Left = 3
+      Left = 6
       Height = 20
-      Top = 3
-      Width = 189
-      Align = alTop
-      BorderSpacing.Around = 3
+      Top = 32
+      Width = 183
       Caption = 'ForwardRadioButton'
       Checked = True
       State = cbChecked
@@ -290,31 +294,36 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     AnchorSideTop.Control = ReplaceTextComboBox
     AnchorSideTop.Side = asrBottom
     Left = 211
-    Height = 69
+    Height = 74
     Top = 66
     Width = 199
     BorderSpacing.Around = 6
     Caption = 'OriginGroupBox'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousSpaceResize
+    ChildSizing.ShrinkHorizontal = crsHomogenousSpaceResize
+    ChildSizing.ShrinkVertical = crsHomogenousSpaceResize
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
     TabOrder = 7
     object FromCursorRadioButton: TRadioButton
-      Left = 3
+      Left = 6
       Height = 20
-      Top = 3
-      Width = 189
-      Align = alTop
-      BorderSpacing.Around = 3
+      Top = 6
+      Width = 183
+      AutoSize = False
       Caption = 'FromCursorRadioButton'
       Checked = True
       State = cbChecked
       TabOrder = 0
     end
     object EntireScopeRadioButton: TRadioButton
-      Left = 3
+      Left = 6
       Height = 20
-      Top = 26
-      Width = 189
-      Align = alTop
-      BorderSpacing.Around = 3
+      Top = 32
+      Width = 183
+      AutoSize = False
       Caption = 'EntireScopeRadioButton'
       TabOrder = 1
     end
@@ -323,9 +332,9 @@ object LazFindReplaceDialog: TLazFindReplaceDialog
     AnchorSideRight.Control = OKButton
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
-    Left = 301
+    Left = 305
     Height = 28
-    Top = 297
+    Top = 313
     Width = 52
     Anchors = [akRight, akBottom]
     AutoSize = True
